# lmfdb

./: .condarc.yml  .coveragerc  .environment.yml  .gitignore  .gitmodules  .hgignore  .travis.yml  20130917-discussion.txt  CONTRIBUTORS.yaml  CommandLineSearch.md  DEVELINFO.txt  DEVELOPMENT.md  Development.md  DirichletCharacter.py  DirichletComp.py  DirichletNavigationProcessing.py  DirichletPageProcessing.py  GettingStarted.md  Inventory.md  LICENSE  Lfunction.py  LfunctionComp.py  LfunctionNavigationProcessing.py  LfunctionPlot.py  Lfunctionutilities.py  ListCharacters.py  MANIFEST.in  Postgres_FAQ.md  Pretty1.sage  Pretty2.sage  PrettyCoeffs.sage  README.md  StyleGuide.md  StyleSheet.md  TestLfunction.py  TestingLmfdb.md  WebCharacter.py  WebHMF.py  WebLfunction.py  WebNumberField.py  (+81 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: autopep8.yml  generate-matrix.py  generate_autopep8codes.py  matrix_includes.json  publish.yml  python-package.yml  snippet_generate.yml  snippet_test.yml
OEIS/: __init__.py  main.py
OEIS/templates/: oeis_object-index.html
artin_representations/: __init__.py  inject_conductor_len.py  main.py
classical_modular_forms/: __init__.py  test_cmf.py
classical_modular_forms/backend/: __init__.py  __init__.py~  (+3 more)
databases/: Dokchitser_databases.py  __init__.py  bind_collection.py  standard_types.py  type_generation.py
examples/: mapreduce.py  referencing.py  searching.py
galois_groups/: Database-info  __init__.py  import_gg_data.py  main.py
hilbert_modular_form/: import_hmf_data.py  recompute_AL_modp.py
knowledge/: __init__.py  knowl.py  knowledge.py  main.py
lfunction_db/: __init__.py  main.py
lfunctions/: LfunctionComp.py  LfunctionInject.py  LfunctionLcalc.py  LfunctionPlot.py  main.py
lmfdb/: Characters.py  DirichletCharacter.py  HeckeCharacters.py  ListCharacters.py  WebCharacter.py  WebHMF.py  WebNumberField.py  __init__.py  __main__.py  app.py  base.py  boxen.sh  cmdline_search.py  config.py  cyc_alt_res_engine.py  db_backend.py  db_encoding.py  display_stats.py  doc  doc_chars.rst  downloader.py  elliptic_curve.py  example_artin_representation.py  front_boxes.yaml  hilbert_modular_form.py  import_EC_isogeny_data.py  import_ec_data.py  import_generic.py  import_padic_ecdata.py  index_boxes.yaml  lmfdb_database.py  math_classes.py  pages.py  plot_example.py  quadratic_twists.py  raw.py  search_parsing.py  search_wrapper.py  sidebar.py  sidebar.yaml  (+23 more)
local_fields/: __init__.py  main.py
login/: __init__.py  main.py  pwdmanager.py
maass_waveforms/: __init__.py
modular_forms/: __init__.py
number_field_galois_groups/: main.py
number_fields/: Database-info  __init__.py  import_jjnf_data.py  import_nf_data.py  import_trnf.py  link_tim_other.py  number_field.py
perfmon/: ECQpages.txt  HMFpages.txt  NFpages.txt  README.md  random_timings.sh  tcurl.sh
scripts/: build_Lfunction_db.py  build_Lfunction_db_2.py  import_overwrite_generic.py  insert_zeros.py
static/: Lfunction.css  Lfunctionsiegel.css  classical_modular_form_scripts.js  jquery.column.min.js  jquery.dataTables.js  jquery.dataTables.plugins.js  jquery.markitup.markdown.js  knowl.js  lmfdb.js  markdown.css  siegel.css  style.css
symL/: symL.py  sympowlmfdb.py
templates/: 404.html  500.html  DegreeNavigateL.html  Lfunction.html  LfunctionNavigate.html  LfunctionSimple.html  LfunctionTable.html  Lfunction_cuspform.html  Lfunction_navigation.html  Lfunction_space.html  about.html  acknowledgment.html  base.html  bigpicture.html  checklist-fs.html  checklist.html  classical_modular_form.html  classical_modular_form_navigation.html  classical_modular_form_space.html  classical_modular_form_table.html  contact.html  example.html  footer.html  form.html  hilbert_modular_form.html  hilbert_modular_form_space.html  homepage.html  index.html  intro.html  knowl-defs.html  lfuncMainStrip.html  maass_form_nav.html  maass_form_picard.html  maass_form_show.html  not_yet_implemented.html  roadmap.html  sidebar.html  siegel_modular_form.html  siegel_modular_form_space.html  style.css
upload/: fileformats.py  test3  test3d  test3e  upload.py
users/: __init__.py  main.py  pwdmanager.py  test.py  test_users.py
zeros/: __init__.py  main.py
(+1575 files in other folders)
